gccida/g3/combine_simplify_rtx
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4059:35: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  combine_simplify_rtx( rtx x, machine_mode op0_mode, int last, int in_dest) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4065:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v9; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4072:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4080:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v25; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4087:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v32; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4091:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4092:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v37; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4110:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v55; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4111:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v56; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4116:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v61; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4117:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v62; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4137:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v82; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4179:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v124; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4186:4: error: expected ';' after expression
rtx v131; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4186:5: error: use of undeclared identifier 'v131'
rtx v131; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4187:4: error: expected ';' after expression
rtx v132; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4187:5: error: use of undeclared identifier 'v132'
rtx v132; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4193:4: error: expected ';' after expression
rtx v138; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/combine.c:4193:5: error: use of undeclared identifier 'v138'
rtx v138; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combine_simplify_rtx/src/obj/combine.o] Error 1
